--- a/package.json
+++ b/package.json
@@ -19,9 +19,11 @@
   "dependencies": {
     "@grpc/grpc-js": "^1.5.0",
     "@grpc/proto-loader": "^0.6.9",
-    "node-grpc-client": "^1.5.0",
+    "chai": "^4.3.7",
     "cypress": "^7.3.0",
-    "cypress-protobuf": "^1.0.5"
+    "cypress-protobuf": "^1.0.5",
+    "mocha": "^10.2.0",
+    "node-grpc-client": "^1.5.0"
   },
   "bugs": {
     "url": "https://github.com/shiwanthaL/exbanking-service-grpc-test/issues"
