--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "exbanking-service-perf-test automated grpc functional tests",
   "main": "index.js",
   "scripts": {
-    "test": "node specs/ceateuser.spec.js",
+    "test": "mocha specs/*.spec.js",
     "cy:run": "cypress run"
   },
   "repository": {
